--- a/g.html
+++ b/g.html
@@ -7,72 +7,98 @@
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        /* Reduced Custom CSS */
+        /* Custom Styling */
         body {
             background-color: #f5f7fa;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         .calculator-card {
             background-color: #ffffff;
-            border-radius: 8px;
+            border-radius: 10px;
             padding: 2rem;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 1rem;
         }
-        .modal-body p {
-            margin-bottom: 0.5rem;
+        .form-label {
+            font-weight: 500;
         }
-        .footer {
-            text-align: center;
+        .btn-primary {
+            background-color: #000;
+            border-color: #000;
+            transition: background-color 0.3s ease-in-out;
+        }
+        .btn-primary:hover {
+            background-color: #333;
+        }
+        .btn-outline-primary {
+            border-color: #000;
+            color: #000;
+        }
+        .btn-outline-primary:hover {
+            background-color: #000;
+            color: #fff;
+        }
+        .navbar {
+            background-color: #ffffff;
             padding: 1rem;
-            font-size: 1rem;
-            background-color: #f8f9fa;
+        }
+        .navbar-brand img {
+            height: 40px;
+        }
+        .form-check-input {
+            border-radius: 50%;
+        }
+        input:invalid {
+            border-color: red;
+        }
+        input:valid {
+            border-color: #28a745;
         }
     </style>
 </head>
 <body>
 
-    <!-- Header with Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">Bond Calculator</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <!-- Top Navbar -->
+    <nav class="navbar navbar-light border-bottom">
+        <a class="navbar-brand" href="#">
+            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
     </nav>
 
-    <!-- Bond Calculator Section -->
-    <div class="container my-5">
+    <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-6 col-md-8 col-12">
+            <div class="col-md-6">
                 <div class="calculator-card">
-                    <h1 class="text-center mb-4">Bond Calculator</h1>
+                    <h2 class="mb-4">Loan details</h2>
                     <!-- Bond Calculator Form -->
-                    <form id="bondForm">
+                    <form id="bondForm" class="mt-4 needs-validation" novalidate>
                         <div class="mb-3">
-                            <label for="faceValue" class="form-label">Face Value (Principal Amount) (TZS)</label>
-                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
+                            <input type="number" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid bond amount.
+                            </div>
                         </div>
+
                         <div class="mb-3">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid coupon rate.
+                            </div>
                         </div>
+
                         <div class="mb-3">
-                            <label for="yearsToMaturity" class="form-label">Years to Maturity</label>
+                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid number of years.
+                            </div>
                         </div>
+
                         <div class="mb-3">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
@@ -80,92 +106,83 @@
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
+                            <div class="invalid-feedback">
+                                Please select a payment frequency.
+                            </div>
                         </div>
+
+                        <!-- Checkbox example -->
+                        <div class="form-check mb-3">
+                            <input class="form-check-input" type="checkbox" value="" id="initiationFee">
+                            <label class="form-check-label" for="initiationFee">
+                                Include initiation fee in your bond?
+                            </label>
+                        </div>
+
                         <button type="submit" class="btn btn-primary w-100">Calculate</button>
+                        <button type="reset" class="btn btn-outline-primary w-100 mt-2">Clear</button>
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-<!-- Result Modal -->
-<div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header bg-primary text-white">
-                <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <div class="container">
-                    <!-- First row: Annual Coupon -->
-                    <div class="row py-2">
-                        <div class="col-6">
-                            <strong>Annual Coupon Payment:</strong>
-                        </div>
-                        <div class="col-6 text-end">
-                            <p id="annualCoupon" class="mb-0"></p>
-                        </div>
+    <!-- Result Modal -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-6"><strong>Annual Coupon Payment:</strong></div>
+                        <div class="col-6 text-end"><p id="annualCoupon"></p></div>
                     </div>
                     <hr>
-                    <!-- Second row: Total Interest -->
-                    <div class="row py-2">
-                        <div class="col-6">
-                            <strong>Total Interest Earned:</strong>
-                        </div>
-                        <div class="col-6 text-end">
-                            <p id="totalInterest" class="mb-0"></p>
-                        </div>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Interest Earned:</strong></div>
+                        <div class="col-6 text-end"><p id="totalInterest"></p></div>
                     </div>
                     <hr>
-                    <!-- Third row: Total Bond Value -->
-                    <div class="row py-2">
-                        <div class="col-6">
-                            <strong>Total Bond Value:</strong>
-                        </div>
-                        <div class="col-6 text-end">
-                            <p id="totalBondValue" class="mb-0"></p>
-                        </div>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Bond Value:</strong></div>
+                        <div class="col-6 text-end"><p id="totalBondValue"></p></div>
                     </div>
                     <hr>
-                    <!-- Fourth row: Total Future Value -->
-                    <div class="row py-2">
-                        <div class="col-6">
-                            <strong>Total Future Value:</strong>
-                        </div>
-                        <div class="col-6 text-end">
-                            <p id="totalFutureValue" class="mb-0"></p>
-                        </div>
+                    <div class="row">
+                        <div class="col-6"><strong>Total Future Value:</strong></div>
+                        <div class="col-6 text-end"><p id="totalFutureValue"></p></div>
                     </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-    <!-- Footer Section -->
-    <footer class="footer">
-        <p>Bond Calculator © 2024</p>
-    </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Custom Script -->
     <script>
-        // Format number with commas
-        function formatNumberWithCommas(x) {
-            return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
-        }
+        // Form validation
+        (function () {
+            'use strict'
+            var forms = document.querySelectorAll('.needs-validation')
 
-        // Format input value with commas
-        document.getElementById('faceValue').addEventListener('input', function (e) {
-            let value = e.target.value.replace(/,/g, '');
-            e.target.value = formatNumberWithCommas(value);
-        });
+            Array.prototype.slice.call(forms).forEach(function (form) {
+                form.addEventListener('submit', function (event) {
+                    if (!form.checkValidity()) {
+                        event.preventDefault()
+                        event.stopPropagation()
+                    }
+                    form.classList.add('was-validated')
+                }, false)
+            })
+        })();
 
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
@@ -182,17 +199,17 @@
             // Calculate total interest over the life of the bond
             const totalInterest = annualCouponPayment * yearsToMaturity;
 
-            // Calculate total bond value (principal + interest)
+            // Total Bond Value (Face Value + Interest Earned)
             const totalBondValue = faceValue + totalInterest;
 
-            // Calculate future value considering the coupon frequency
-            const totalFutureValue = annualCouponPayment * paymentFrequency * yearsToMaturity;
+            // Total Future Value assuming reinvestment (basic example)
+            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
 
             // Update modal content
-            document.getElementById('annualCoupon').innerText = `Annual Coupon Payment: TZS ${formatNumberWithCommas(annualCouponPayment.toFixed(2))}`;
-            document.getElementById('totalInterest').innerText = `Total Interest Earned Over ${yearsToMaturity} Years: TZS ${formatNumberWithCommas(totalInterest.toFixed(2))}`;
-            document.getElementById('totalBondValue').innerText = `Total Bond Value: TZS ${formatNumberWithCommas(totalBondValue.toFixed(2))}`;
-            document.getElementById('totalFutureValue').innerText = `Total Future Value (with Coupon Frequency): TZS ${formatNumberWithCommas(totalFutureValue.toFixed(2))}`;
+            document.getElementById('annualCoupon').innerText = `TZS ${annualCouponPayment.toLocaleString()}`;
+            document.getElementById('totalInterest').innerText = `TZS ${totalInterest.toLocaleString()}`;
+            document.getElementById('totalBondValue').innerText = `TZS ${totalBondValue.toLocaleString()}`;
+            document.getElementById('totalFutureValue').innerText = `TZS ${totalFutureValue.toLocaleString()}`;
 
             // Show the modal
             const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
