--- a/g.html
+++ b/g.html
@@ -52,7 +52,7 @@
             border-color: black;
         }
         input.invalid-input {
-            border-color: red;
+            border-color: red !important;
         }
         footer {
             background-color: #f8f9fa;
