--- a/g.html
+++ b/g.html
@@ -77,7 +77,7 @@
                     <form id="bondForm" class="mt-4 needs-validation" novalidate>
                         <div class="mb-3">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
-                            <input type="number" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <input type="number" class="form-control" id="faceValue" placeholder="Enter bond's face value" min="0" step="any" required>
                             <div class="invalid-feedback">
                                 Please enter a valid bond amount.
                             </div>
@@ -86,21 +86,30 @@
                         <div class="mb-3">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid coupon rate.
+                            </div>
                         </div>
 
                         <div class="mb-3">
                             <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
-                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
+                            <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
+                            <div class="invalid-feedback">
+                                Please enter a valid loan term.
+                            </div>
                         </div>
 
                         <div class="mb-3">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
+                                <option value="" disabled selected>Select frequency</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
-                            
+                            <div class="invalid-feedback">
+                                Please select a payment frequency.
+                            </div>
                         </div>
 
                         <!-- Checkbox example -->
@@ -162,28 +171,32 @@
     <script>
         // Form validation
         (function () {
-            'use strict'
-            var forms = document.querySelectorAll('.needs-validation')
-
+            'use strict';
+            const forms = document.querySelectorAll('.needs-validation');
+            
             Array.prototype.slice.call(forms).forEach(function (form) {
                 form.addEventListener('submit', function (event) {
                     if (!form.checkValidity()) {
-                        event.preventDefault()
-                        event.stopPropagation()
+                        event.preventDefault();
+                        event.stopPropagation();
                     }
-                    form.classList.add('was-validated')
-                }, false)
-            })
+                    form.classList.add('was-validated');
+                }, false);
+            });
         })();
 
         document.getElementById('bondForm').addEventListener('submit', function (event) {
             event.preventDefault();
 
             // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, ''));
+            const faceValue = parseFloat(document.getElementById('faceValue').value);
             const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
             const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
             const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+
+            if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
+                return;
+            }
 
             // Calculate annual coupon payment
             const annualCouponPayment = faceValue * couponRate;
