--- a/g.html
+++ b/g.html
@@ -69,7 +69,7 @@
     <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand" href="#">
-            <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
+            <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
