--- a/g.html
+++ b/g.html
@@ -107,17 +107,13 @@
                         <div class="mb-3">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
-                            <div class="invalid-feedback">
-                                Please enter a valid coupon rate.
-                            </div>
+                            
                         </div>
 
                         <div class="mb-3">
                             <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
-                            <div class="invalid-feedback">
-                                Please enter a valid loan term.
-                            </div>
+                            
                         </div>
 
                         <div class="mb-3">
@@ -187,7 +183,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Bond Calculator Page</p>
+        <p>Bond Calculator</p>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
