--- a/g.html
+++ b/g.html
@@ -93,7 +93,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6">
                 <div class="calculator-card">
-                    <h2 class="mb-4">Loan details</h2>
+                    <h2 class="mb-4">Bond Calculator</h2>
                     <!-- Bond Calculator Form -->
                     <form id="bondForm" class="mt-4 needs-validation" novalidate>
                         <div class="mb-3">
@@ -111,7 +111,7 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
+                            <label for="yearsToMaturity" class="form-label">Bond Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" min="1" required>
                             
                         </div>
