--- a/g.html
+++ b/g.html
@@ -70,6 +70,7 @@
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand" href="#">
             <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+           <h2 class="mb-4">Bond Calculator</h2>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
