--- a/g.html
+++ b/g.html
@@ -12,26 +12,6 @@
             background-color: #f5f7fa;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        .navbar {
-            background-color: #343a40; /* Dark background color */
-            padding: 1rem 1.5rem; /* Add padding for better spacing */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Add shadow for depth */
-        }
-        .navbar-brand {
-            font-size: 1.8rem; /* Increase font size for brand */
-            color: #fff; /* White color for brand text */
-        }
-        .navbar-brand:hover {
-            color: #ffd700; /* Gold color on hover */
-        }
-        .nav-link {
-            color: #f8f9fa; /* Light color for nav links */
-            font-size: 1.2rem; /* Increase font size */
-            transition: color 0.3s; /* Smooth transition for hover effect */
-        }
-        .nav-link:hover {
-            color: #ffd700; /* Gold color on hover */
-        }
         .calculator-card {
             background-color: #ffffff;
             border-radius: 10px;
@@ -58,6 +38,20 @@
             background-color: #000;
             color: #fff;
         }
+        .navbar {
+            padding: 1rem 1.5rem; /* Add padding for better spacing */
+        }
+        .nav-link {
+            font-size: 1.1rem; /* Increase font size */
+            transition: color 0.3s; /* Smooth transition for hover effect */
+        }
+        .nav-link:hover {
+            color: #007bff; /* Change color on hover */
+        }
+        .navbar-brand h2 {
+            font-size: 1.5rem; /* Adjust brand font size */
+            margin: 0; /* Remove bottom margin */
+        }
         footer {
             margin-top: 2rem;
             padding: 1rem;
@@ -75,7 +69,7 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <a class="navbar-brand d-flex align-items-center" href="#">
             <img src="img/logo.png" alt="Logo" class="me-2" style="width: 40px; height: auto;"> <!-- Adjust logo size -->
             <h2 class="mb-0">123 Bank Plc</h2>
@@ -220,7 +214,9 @@
         }
 
         document.getElementById('faceValue').addEventListener('input', function () {
-            const value = this.value.replace(/,/g, ''); // Remove existing commas
+            // Remove non-digit characters
+            let value = this.value.replace(/[^0-9]/g, '');
+            // Format with commas
             this.value = formatNumber(value);
         });
 
