--- a/g.html
+++ b/g.html
@@ -190,72 +190,80 @@
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Custom Script -->
-    <script>
-        // Form validation
-        (function () {
-            'use strict';
-            const forms = document.querySelectorAll('.needs-validation');
-            
-            Array.prototype.slice.call(forms).forEach(function (form) {
-                form.addEventListener('submit', function (event) {
-                    if (!form.checkValidity()) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add('was-validated');
-                }, false);
-            });
-        })();
+    // Custom Script
+<script>
+    // Form validation
+    (function () {
+        'use strict';
+        const forms = document.querySelectorAll('.needs-validation');
+        
+        Array.prototype.slice.call(forms).forEach(function (form) {
+            form.addEventListener('submit', function (event) {
+                if (!form.checkValidity()) {
+                    event.preventDefault();
+                    event.stopPropagation();
+                }
+                form.classList.add('was-validated');
+            }, false);
+        });
+    })();
 
-        // Function to format number with commas
-        function formatNumber(num) {
-            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    // Function to format number with commas
+    function formatNumber(num) {
+        return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    }
+
+    document.getElementById('faceValue').addEventListener('input', function () {
+        // Remove non-digit characters
+        let value = this.value.replace(/[^0-9]/g, '');
+        // Format with commas
+        this.value = formatNumber(value);
+    });
+
+    document.getElementById('bondForm').addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        // Get form values
+        const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
+        const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
+        const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
+        const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+
+        if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
+            alert('Please fill in all required fields.');
+            return;
         }
 
-        document.getElementById('faceValue').addEventListener('input', function () {
-            // Remove non-digit characters
-            let value = this.value.replace(/[^0-9]/g, '');
-            // Format with commas
-            this.value = formatNumber(value);
-        });
+        // Calculate annual coupon payment
+        const annualCouponPayment = faceValue * couponRate;
 
-        document.getElementById('bondForm').addEventListener('submit', function (event) {
-            event.preventDefault();
+        // Calculate total interest over the life of the bond
+        const totalInterest = annualCouponPayment * yearsToMaturity;
 
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, '')); // Remove commas for calculation
-            const couponRate = parseFloat(document.getElementById('couponRate').value) / 100;
-            const yearsToMaturity = parseFloat(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseFloat(document.getElementById('paymentFrequency').value);
+        // Total Bond Value (Face Value + Interest Earned)
+        const totalBondValue = faceValue + totalInterest;
 
-            if (isNaN(faceValue) || isNaN(couponRate) || isNaN(yearsToMaturity) || isNaN(paymentFrequency)) {
-                alert('Please fill in all required fields.');
-                return;
-            }
+        // Total Future Value assuming reinvestment (basic example)
+        const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
 
-            // Calculate annual coupon payment
-            const annualCouponPayment = faceValue * couponRate;
+        // Update modal content
+        document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
+        document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
+        document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
+        document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
 
-            // Calculate total interest over the life of the bond
-            const totalInterest = annualCouponPayment * yearsToMaturity;
+        // Show the modal
+        const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
+        resultModal.show();
+    });
 
-            // Total Bond Value (Face Value + Interest Earned)
-            const totalBondValue = faceValue + totalInterest;
-
-            // Total Future Value assuming reinvestment (basic example)
-            const totalFutureValue = faceValue * Math.pow((1 + couponRate / paymentFrequency), paymentFrequency * yearsToMaturity);
-
-            // Update modal content
-            document.getElementById('annualCoupon').innerText = `TZS ${formatNumber(annualCouponPayment.toFixed(2))}`;
-            document.getElementById('totalInterest').innerText = `TZS ${formatNumber(totalInterest.toFixed(2))}`;
-            document.getElementById('totalBondValue').innerText = `TZS ${formatNumber(totalBondValue.toFixed(2))}`;
-            document.getElementById('totalFutureValue').innerText = `TZS ${formatNumber(totalFutureValue.toFixed(2))}`;
-
-            // Show the modal
-            const resultModal = new bootstrap.Modal(document.getElementById('resultModal'));
-            resultModal.show();
-        });
-    </script>
+    // Reset button functionality
+    const resetButton = document.querySelector('button[type="reset"]');
+    resetButton.addEventListener('click', function () {
+        // Reset the button's classes
+        this.classList.remove('active'); // Remove the active state
+        this.classList.remove('btn-primary'); // Ensure it returns to the outline style
+    });
+</script>
 </body>
 </html>
