--- a/g.html
+++ b/g.html
@@ -101,7 +101,7 @@
                     <form id="bondForm" class="mt-4 needs-validation" novalidate>
                         <div class="mb-3">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
-                            <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <input type="number" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
                             <div class="invalid-feedback">
                                 Please enter a valid bond amount.
                             </div>
